[project]
name = "wakeandwait"
version = "0.2.0"
description = "A tool to wake computers and wait for them"
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
dependencies = [
  "wakeonlan>=3.1.0",
  "rich>=13.7.1",
  "tomlkit>=0.13.0",
  "pyxdg>=0.28",
  "desktop-notify>=1.3.3",
  "multiprocessing-logging>=0.3.4",
]
requires-python = ">= 3.9"

[project.scripts]
wakeandwait = "wakeandwait:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel>=6.29.5"]

[tool.hatch.metadata]
allow-direct-references = true
